Prevent content from overlapping footer

--- a/assets/css/course-site-custom.css
+++ b/assets/css/course-site-custom.css
@@ -9,9 +9,13 @@ html {
     position: relative;
     min-height: 100%;
 }
+#body {
+    padding-bottom: 60px;       /* Same as footer height */
+}
 #footer {
     position: absolute;
     bottom: 0;
+    height: 60px;
     width: 100%;
     padding-bottom: 5px;
 }
